RESOLVED FIXED 282423
[WebCore] Fix -Wunsafe-buffer-usage in PropertyCascade.h
https://bugs.webkit.org/show_bug.cgi?id=282423
Summary [WebCore] Fix -Wunsafe-buffer-usage in PropertyCascade.h
David Kilzer (:ddkilzer)
Reported 2024-10-31 20:56:25 PDT
Fix -Wunsafe-buffer-usage in PropertyCascade.h. Update `WebCore::PropertyCascade::logicalGroupPropertyIDs() const` to create std::span from std::array, the limit size via std::span::first().
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-31 20:56:38 PDT
David Kilzer (:ddkilzer)
Comment 2 2024-10-31 21:01:37 PDT
EWS
Comment 3 2024-11-01 11:01:20 PDT
Committed 286013@main (81801b27a2b4): <https://commits.webkit.org/286013@main> Reviewed commits have been landed. Closing PR #36034 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.