[WebCore] Fix -Wunsafe-buffer-usage in PropertyCascade.h <https://bugs.webkit.org/show_bug.cgi?id=282423> <rdar://139050140>

Reviewed by Geoffrey Garen and Chris Dumez.

* Source/WebCore/style/PropertyCascade.h:
(WebCore::Style::PropertyCascade::logicalGroupPropertyIDs const):
- Create std::span directly from std::array, then use first() to apply
  bounds check.

Canonical link: https://commits.webkit.org/286013@main